resources/public/title.css
div.block {
  clear: both;
  width: 100%;
  margin: 2em auto;
}

div#desc {
  max-width: 1280px;
}

div#poster {
  text-align: center;
}

div#poster img {
  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.258824);
  margin-bottom: 2em;
  max-width: 100%;
}

span.year, span.released, span.rated, span.duration {
  color: rgba(0,0,0,0.54);
  margin-right: 0.5em;
}

table {
  color: rgba(0,0,0,0.54);
  font-size: 0.9em;
  padding-left: 0;
  margin-left: 0;
}

table td {
  padding-right: 1em;
}

table td:first-child {
  padding-left: 0;
}

span.label {
  font-weight: bold;
}

div#links {
  text-align: center;
}

p.plot {
  font-size: 1.2em;
  line-height: 150%;
}

ul {
  list-style: none;
  padding-left: 0;
}
li {
  color: rgba(0,0,0,0.54);
}

div#links a {
  margin-right: 1em;
}

div#links a button {
  background: #fafafa;
}

div#links a button:hover {
  background: white;
}

div#seasons {
  max-width: 1280px;
}

div#season.has-episodes {
  max-width: 1280px;
}

ul {
  margin-before: 0;
  /* margin-after: 0; */
  -webkit-margin-before: 0;
  /* -webkit-margin-after: 0; */
}

li.selected {
  color: inherit;
  font-weight: bold;
}

p.overview {
  line-height: 125%;
}

div#episodes {
  margin-bottom: 2em;
}

div#player {
  text-align: center;
}

video {
  max-width: 100%;
  background-color: black;
  // border: thin solid black;
}

@media (min-width: 940px)
{
  div.two-columns
  {
    clear: both;
  }
  div.left-column
  {
    float: left;
    width: 320px;
  }
  div.right-column, div#season.has-episodes div#player
  {
    vertical-align: top;
    margin-left: 368px;
  }
  div.desc {
    margin-left: 1.5em;
  }
}

.js .js-hidden {
	visibility: hidden;
}

